功能: 新增受控Vue项目构建工具